[package]
name = "test-actix-multipath"
version = "0.1.0"
authors = ["Psilon <pzixel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.1"
actix-cors = "0.5.4"
actix-web = "3"
actix-router = "0.2.6"
actix-service = "1.0.6"
